# ENPM690_Project

./: readme.md
ROSFiles/rc_car/: CMakeLists.txt  package.xml
ROSFiles/rc_car/config/: control.yaml
ROSFiles/rc_car/launch/: competition.launch.py  spawn_robot_ros2.launch.py
ROSFiles/rc_car/meshes/: back_left_wheel_link.STL  back_right_wheel_link.STL  base_link.STL  left_steer_link.STL  lidar_link.STL  right_steer_link.STL  top_left_wheel_link.STL  top_right_wheel_link.STL
ROSFiles/rc_car/src/: keyboard_control_node.py  rl_controller.py
ROSFiles/rc_car/urdf/: rc_car.csv  rc_car.urdf.xacro
TrainingFiles/: car_racing.py  deploy_raylib.py  raylib_ppo.py
